--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <section id="article">
                     <p>article</p>
                     <section id="h1">
-                            <p>h1, h2, h3</p>
-                            <p>p</p>
+                            <p class="innertext">h1, h2, h3</p>
+                            <p class="innertext">p</p>
                     </section>
             </section>
         </section>
